style.css
*{
    box-sizing: border-box;
}

body{
    min-width: 350px;
    min-height: 300px;
}

.headerbox{
    background-color: rgb(66, 133, 244);
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    margin-top: 4px;
    margin-bottom: 4px;
    text-align: center;
    color: white;
}

.surroundbox{
    min-width: 300px;
    min-height: 300px;
    position: relative;
    padding: 0 5px;
    padding-bottom: 0;
}

.box{
    background-color: rgb(243, 242, 244);
}

.messages{
    overflow-y: scroll;
    height:250px;
}

.mynewmessage{
    margin-right: 0.5rem;
    background-color: #e0e0e0;
    text-align: right;
    width: 50%;
}

.mynewmessage p{
    display: inline;
}

.susinewmessage{
    text-align: left;
    margin-right: 0.5rem;
    width:50%
}

.susinewmessage p{
    background-color: #00ffff;
    display: inline;
}

.send{
    position: absolute;
    bottom: 0;
}
.button{
    margin-left : 15px;
}

